# hodllive

./: .gitignore  channels.json  channels.py  dev_server.py  do_update.sh  hodllive.js  hodllive.json  hodllive.py  index.html  pyproject.toml  requirements.txt  styles.css  subscribers.db  validate.py  vtubers.json
.github/workflows/: update_data.yml
scripts/: export_subscribers.py  migrate_hodllive_names.py  nijisanji_wiki.py  validate.py  wayback_subs.py  wiki_member_info.py
scripts/channels/: README.md  hololive_channels.json  nijisanji_channels.json  nijisanji_en_channels.json
scripts/gens/: README.md  hololive_gens.json  nijisanji_en_gens.json  nijisanji_gens.json
scripts/wiki/: hololive.json  nijisanji_en.json  nijisanji_full.json
scripts/wiki_results/: README.md  hololive_wiki.json  niji_en_wiki.json  niji_full_wiki.json
