[tool.poetry]
name = "hodllive"
version = "0.1.0"
description = ""
authors = ["Jeff Tao <jatao88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.27.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
lxml = "^4.9.1"
requests = "^2.28.1"
waybackpy = "^3.0.6"
cssselect = "^1.1.0"
glom = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
